feat: add logic to fill trophies to backend api response
